# woxiaworld_scraper

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: write_version_to_file.py
src/wuxiaworld_scraper/: __about__.py  __main__.py  navigate.py  scraper.py  writer.py
